# belyakovtp

task0/: README.md
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: .preparing.py.swp  preparing.py
task2/B/: .CMakeLists.txt.swp  CMakeLists.txt  lib.cpp  lib.h
task2/C/: .main.cpp.swp  .main.h.swo  .main.h.swp  main.cpp  main.h
task3/: CMakeLists.txt
task3/src/: CMakeLists.txt
task4/tests/01-simple-library/: AddTestCase.cpp  LeapTestCase.cpp
task4/tests/02-tree/: TreeTestCase.cpp
task5/cmake-with-flask/: Dockerfile
